fix: stop county names from shifting right when clicked in the landing search

--- a/doorway-ui-components/src/forms/FieldGroup.scss
+++ b/doorway-ui-components/src/forms/FieldGroup.scss
@@ -3,6 +3,5 @@
     background-color: var(--bloom-color-primary-lighter);
     background-image: url("/images/check.svg");
     box-shadow: 0 0 0 1px var(--bloom-color-primary-lighter);
-    @apply mr-2;
   }
 }
